<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ln_edit_tail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    android:orientation="horizontal">


    <LinearLayout
        android:id="@+id/ln_copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="10dp">


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@mipmap/icon_copy" />

        <TextView
            android:id="@+id/tv_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy"
            android:textSize="12dp"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="10dp">


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@mipmap/icon_move" />

        <TextView
            android:id="@+id/tv_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move"
            android:textSize="12dp"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_analyse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="10dp">


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@mipmap/icon_file_delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analyse"
            android:textSize="12dp"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="10dp">


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@mipmap/icon_file_share" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textSize="12dp"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        >


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@mipmap/icon_more" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:textSize="12dp"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>