<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ln_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center|left"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/ln_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Button
                android:id="@+id/leftBtn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@mipmap/icon_left_black"
                android:paddingLeft="10dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="@string/collect"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>










    <cn.oasdk.fileview.view.FilePathView
        android:id="@+id/filePathView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:id="@+id/ln_tip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="@string/tip_no_file" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/add_file" />

        </LinearLayout>
        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:divider="@null"
            android:paddingBottom="16dp" />
    </FrameLayout>


    <include layout="@layout/file_edit_tail_view" />

    <include layout="@layout/file_view_tail" />
</LinearLayout>