<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/img_type"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:src="@mipmap/icon_file" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/fileName"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/name"
                            android:textSize="16dp" />


                        <TextView
                            android:id="@+id/url"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:id="@+id/ln_dir"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/dir"
                                android:textSize="12dp" />
                            <TextView
                                android:id="@+id/dirCount"
                                android:layout_width="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_height="wrap_content"
                                android:textSize="12dp" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/file"
                                android:paddingLeft="8dp"
                                android:textSize="12dp" />
                            <TextView
                                android:id="@+id/fileCount"
                                android:layout_marginLeft="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingRight="20dp"
                                android:textSize="12dp" />
                        </LinearLayout>
                        <TextView
                            android:id="@+id/fileSizeText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12dp" />
                    </LinearLayout>



                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_tip_check"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:background="@mipmap/icon_circle"
                android:textSize="14dp" />
            <ImageView
                android:id="@+id/img_check"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:visibility="gone"
                android:layout_marginRight="10dp"
                android:background="@mipmap/icon_file_uncheck02"
                android:textSize="14dp" />
        </FrameLayout>

    </LinearLayout>

    <View style="@style/line_hz_grey_lt" />

</LinearLayout>
